@@ -9,6 +9,7 @@ package org.mozilla.javascript;
 import java.io.Serializable;
 import java.lang.reflect.Constructor;
 import java.text.MessageFormat;
+import java.util.Arrays;
 import java.util.Locale;
 import java.util.ResourceBundle;
 
@@ -21,8 +22,8 @@ import org.mozilla.javascript.xml.XMLObject;
 /**
  * This is the class that implements the runtime.
  *
- * @author Norris Boyd
- * @version $Id: $Id
+ * Author Norris Boyd
+ *
  */
 public class ScriptRuntime {
 
@@ -59,7 +60,7 @@ public class ScriptRuntime {
 
           @Override
           public Object call(Context cx, Scriptable scope, Scriptable thisObj, Object[] args) {
-            throw typeError0("msg.op.not.allowed");
+            throw typeErrorById("msg.op.not.allowed");
           }
           @Override
           public int getLength() {
@@ -87,7 +88,7 @@ public class ScriptRuntime {
          *
          * @param cx the current Context for this thread
          * @param scope the scope to use to resolve properties.
-         * @param thisObj the JavaScript this object
+         * @param thisObj the JavaScript <code>this</code> object
          * @param args the array of arguments
          * @return the result of the call
          */
@@ -113,19 +114,19 @@ public class ScriptRuntime {
      * that they won't cause problems by being loaded early.
      */
 
-    /** Constant BooleanClass */
-    /** Constant ByteClass */
-    /** Constant CharacterClass */
-    /** Constant ClassClass */
-    /** Constant DoubleClass */
-    /** Constant FloatClass */
-    /** Constant IntegerClass */
-    /** Constant LongClass */
-    /** Constant NumberClass */
-    /** Constant ObjectClass */
-    /** Constant ShortClass */
-    /** Constant StringClass */
-    /** Constant DateClass */
+    /** Constant <code>BooleanClass</code> */
+    /** Constant <code>ByteClass</code> */
+    /** Constant <code>CharacterClass</code> */
+    /** Constant <code>ClassClass</code> */
+    /** Constant <code>DoubleClass</code> */
+    /** Constant <code>FloatClass</code> */
+    /** Constant <code>IntegerClass</code> */
+    /** Constant <code>LongClass</code> */
+    /** Constant <code>NumberClass</code> */
+    /** Constant <code>ObjectClass</code> */
+    /** Constant <code>ShortClass</code> */
+    /** Constant <code>StringClass</code> */
+    /** Constant <code>DateClass</code> */
     public final static Class<?>
         BooleanClass      = Kit.classOrNull("java.lang.Boolean"),
         ByteClass         = Kit.classOrNull("java.lang.Byte"),
@@ -141,10 +142,10 @@ public class ScriptRuntime {
         StringClass       = Kit.classOrNull("java.lang.String"),
         DateClass         = Kit.classOrNull("java.util.Date");
 
-    /** Constant ContextClass */
-    /** Constant ContextFactoryClass */
-    /** Constant FunctionClass */
-    /** Constant ScriptableObjectClass */
+    /** Constant <code>ContextClass</code> */
+    /** Constant <code>ContextFactoryClass</code> */
+    /** Constant <code>FunctionClass</code> */
+    /** Constant <code>ScriptableObjectClass</code> */
     public final static Class<?>
         ContextClass
             = Kit.classOrNull("org.mozilla.javascript.Context"),
@@ -154,7 +155,7 @@ public class ScriptRuntime {
             = Kit.classOrNull("org.mozilla.javascript.Function"),
         ScriptableObjectClass
             = Kit.classOrNull("org.mozilla.javascript.ScriptableObject");
-    /** Constant ScriptableClass */
+    /** Constant <code>ScriptableClass</code> */
     public static final Class<Scriptable> ScriptableClass =
         Scriptable.class;
 
@@ -229,7 +230,7 @@ public class ScriptRuntime {
         NativeCall.init(scope, sealed);
         NativeScript.init(scope, sealed);
 
-        NativeIterator.init(scope, sealed); // Also initializes NativeGenerator
+        NativeIterator.init(cx, scope, sealed); // Also initializes NativeGenerator & ES6Generator
 
         NativeArrayIterator.init(scope, sealed);
         NativeStringIterator.init(scope, sealed);
@@ -301,7 +302,7 @@ public class ScriptRuntime {
         }
 
         if (scope instanceof TopLevel) {
-            ((TopLevel)scope).cacheBuiltins();
+            ((TopLevel)scope).cacheBuiltins(scope, sealed);
         }
 
         return scope;
@@ -428,7 +429,7 @@ public class ScriptRuntime {
      */
     public static Boolean wrapBoolean(boolean b)
     {
-        return b ? Boolean.TRUE : Boolean.FALSE;
+        return Boolean.valueOf(b);
     }
 
     /**
@@ -453,7 +454,7 @@ public class ScriptRuntime {
         if (Double.isNaN(x)) {
             return ScriptRuntime.NaNobj;
         }
-        return new Double(x);
+        return Double.valueOf(x);
     }
 
     /**
@@ -522,7 +523,7 @@ public class ScriptRuntime {
             if (val instanceof Boolean)
                 return ((Boolean) val).booleanValue() ? 1 : +0.0;
             if (val instanceof Symbol)
-                throw typeError0("msg.not.a.number");
+                throw typeErrorById("msg.not.a.number");
             if (val instanceof Scriptable) {
                 val = ((Scriptable) val).getDefaultValue(NumberClass);
                 if ((val instanceof Scriptable) && !isSymbol(val))
@@ -545,15 +546,19 @@ public class ScriptRuntime {
         return (index < args.length) ? toNumber(args[index]) : NaN;
     }
 
-    /** Constant NaN=Double.NaN */
+    /** Constant <code>NaN=Double.NaN</code> */
     public static final double NaN = Double.NaN;
+    /** Constant <code>NaNobj</code> */
+    public static final Double NaNobj = Double.valueOf(NaN);
 
     // Preserve backward-compatibility with historical value of this.
-    /** Constant negativeZero=Double.longBitsToDouble(0x8000000000000000L) */
+    /** Constant <code>negativeZero=Double.longBitsToDouble(0x8000000000000000L)</code> */
     public static final double negativeZero = Double.longBitsToDouble(0x8000000000000000L);
 
-    /** Constant NaNobj */
-    public static final Double NaNobj = new Double(NaN);
+    /** Constant <code>zeroObj</code> */
+    public static final Double zeroObj = Double.valueOf(0.0);
+    /** Constant <code>negativeZeroObj</code> */
+    public static final Double negativeZeroObj = Double.valueOf(-0.0);
 
     static double stringPrefixToNumber(String s, int start, int radix) {
         return stringToNumber(s, start, s.length() - 1, radix, true);
@@ -840,16 +845,11 @@ public class ScriptRuntime {
         if (count < args.length)
             return args;
 
-        int i;
         Object[] result = new Object[count];
-        for (i = 0; i < args.length; i++) {
-            result[i] = args[i];
+        System.arraycopy(args, 0, result, 0, args.length);
+        if (args.length < count) {
+            Arrays.fill(result, args.length, count, Undefined.instance);
         }
-
-        for (; i < count; i++) {
-            result[i] = Undefined.instance;
-        }
-
         return result;
     }
 
@@ -989,7 +989,7 @@ public class ScriptRuntime {
                 return numberToString(((Number)val).doubleValue(), 10);
             }
             if (val instanceof Symbol) {
-                throw typeError0("msg.not.a.string");
+                throw typeErrorById("msg.not.a.string");
             }
             if (val instanceof Scriptable) {
                 val = ((Scriptable) val).getDefaultValue(StringClass);
@@ -1042,7 +1042,7 @@ public class ScriptRuntime {
      */
     public static String numberToString(double d, int base) {
         if ((base < 2) || (base > 36)) {
-            throw Context.reportRuntimeError1(
+            throw Context.reportRuntimeErrorById(
                 "msg.bad.radix", Integer.toString(base));
         }
 
@@ -1267,10 +1267,10 @@ public class ScriptRuntime {
     public static Scriptable toObject(Context cx, Scriptable scope, Object val)
     {
         if (val == null) {
-            throw typeError0("msg.null.to.object");
+            throw typeErrorById("msg.null.to.object");
         }
         if (Undefined.isUndefined(val)) {
-            throw typeError0("msg.undef.to.object");
+            throw typeErrorById("msg.undef.to.object");
         }
 
         if (isSymbol(val)) {
@@ -1343,7 +1343,7 @@ public class ScriptRuntime {
         Function function = (Function)fun;
         Scriptable thisObj = toObjectOrNull(cx, thisArg, scope);
         if (thisObj == null) {
-            throw undefCallError(thisObj, "function");
+            throw undefCallError(null, "function");
         }
         return function.call(cx, scope, thisObj, args);
     }
@@ -1606,10 +1606,10 @@ public class ScriptRuntime {
             return (Function)ctorVal;
         }
         if (ctorVal == Scriptable.NOT_FOUND) {
-            throw Context.reportRuntimeError1(
+            throw Context.reportRuntimeErrorById(
                 "msg.ctor.not.found", constructorName);
         }
-        throw Context.reportRuntimeError1("msg.not.ctor", constructorName);
+        throw Context.reportRuntimeErrorById("msg.not.ctor", constructorName);
     }
 
     /**
@@ -1739,20 +1739,41 @@ public class ScriptRuntime {
     }
 
     /**
+     * Helper to return a string or an integer.
+     * Always use a null check on s.stringId to determine
+     * if the result is string or integer.
+     *
+     * @see ScriptRuntime#toStringIdOrIndex(Context, Object)
+     */
+    static final class StringIdOrIndex {
+        final String stringId;
+        final int index;
+
+        StringIdOrIndex(String stringId) {
+            this.stringId = stringId;
+            this.index = -1;
+        }
+
+        StringIdOrIndex(int index) {
+            this.stringId = null;
+            this.index = index;
+        }
+    }
+
+    /**
      * If toString(id) is a decimal presentation of int32 value, then id
      * is index. In this case return null and make the index available
      * as ScriptRuntime.lastIndexResult(cx). Otherwise return toString(id).
      */
-    static String toStringIdOrIndex(Context cx, Object id)
+    static StringIdOrIndex toStringIdOrIndex(Context cx, Object id)
     {
         if (id instanceof Number) {
             double d = ((Number)id).doubleValue();
             int index = (int)d;
             if (index == d) {
-                storeIndexResult(cx, index);
-                return null;
+                return new StringIdOrIndex(index);
             }
-            return toString(id);
+            return new StringIdOrIndex(toString(id));
         }
         String s;
         if (id instanceof String) {
@@ -1762,10 +1783,9 @@ public class ScriptRuntime {
         }
         long indexTest = indexFromString(s);
         if (indexTest >= 0) {
-            storeIndexResult(cx, (int)indexTest);
-            return null;
+            return new StringIdOrIndex((int)indexTest);
         }
-        return s;
+        return new StringIdOrIndex(s);
     }
 
     /**
@@ -1820,12 +1840,12 @@ public class ScriptRuntime {
         } else if (isSymbol(elem)) {
             result = ScriptableObject.getProperty(obj, (Symbol)elem);
         } else {
-            String s = toStringIdOrIndex(cx, elem);
-            if (s == null) {
-                int index = lastIndexResult(cx);
+            StringIdOrIndex s = toStringIdOrIndex(cx, elem);
+            if (s.stringId == null) {
+                int index = s.index;
                 result = ScriptableObject.getProperty(obj, index);
             } else {
-                result = ScriptableObject.getProperty(obj, s);
+                result = ScriptableObject.getProperty(obj, s.stringId);
             }
         }
 
@@ -1886,7 +1906,7 @@ public class ScriptRuntime {
         Object result = ScriptableObject.getProperty(obj, property);
         if (result == Scriptable.NOT_FOUND) {
             if (cx.hasFeature(Context.FEATURE_STRICT_MODE)) {
-                Context.reportWarning(ScriptRuntime.getMessage1(
+                Context.reportWarning(ScriptRuntime.getMessageById(
                     "msg.ref.undefined.prop", property));
             }
             result = Undefined.instance;
@@ -2050,12 +2070,11 @@ public class ScriptRuntime {
         } else if (isSymbol(elem)) {
             ScriptableObject.putProperty(obj, (Symbol)elem, value);
         } else {
-            String s = toStringIdOrIndex(cx, elem);
-            if (s == null) {
-                int index = lastIndexResult(cx);
-                ScriptableObject.putProperty(obj, index, value);
+            StringIdOrIndex s = toStringIdOrIndex(cx, elem);
+            if (s.stringId == null) {
+                ScriptableObject.putProperty(obj, s.index, value);
             } else {
-                ScriptableObject.putProperty(obj, s, value);
+                ScriptableObject.putProperty(obj, s.stringId, value);
             }
         }
 
@@ -2093,10 +2112,17 @@ public class ScriptRuntime {
                                        Object value, Context cx,
                                        Scriptable scope)
     {
+        if (!(obj instanceof Scriptable)
+                && cx.isStrictMode()
+                && cx.getLanguageVersion() >= Context.VERSION_1_8) {
+            throw undefWriteError(obj, property, value);
+        }
+
         Scriptable sobj = toObjectOrNull(cx, obj, scope);
         if (sobj == null) {
             throw undefWriteError(obj, property, value);
         }
+
         return setObjectProp(sobj, property, value, cx);
     }
 
@@ -2195,14 +2221,13 @@ public class ScriptRuntime {
             so.delete(s);
             return !so.has(s, target);
         }
-        String s = toStringIdOrIndex(cx, elem);
-        if (s == null) {
-            int index = lastIndexResult(cx);
-            target.delete(index);
-            return !target.has(index, target);
+        StringIdOrIndex s = toStringIdOrIndex(cx, elem);
+        if (s.stringId == null) {
+            target.delete(s.index);
+            return !target.has(s.index, target);
         }
-        target.delete(s);
-        return !target.has(s, target);
+        target.delete(s.stringId);
+        return !target.has(s.stringId, target);
     }
 
     /**
@@ -2221,12 +2246,11 @@ public class ScriptRuntime {
         if (isSymbol(elem)) {
             result = ScriptableObject.hasProperty(target, (Symbol)elem);
         } else {
-            String s = toStringIdOrIndex(cx, elem);
-            if (s == null) {
-                int index = lastIndexResult(cx);
-                result = ScriptableObject.hasProperty(target, index);
+            StringIdOrIndex s = toStringIdOrIndex(cx, elem);
+            if (s.stringId == null) {
+                result = ScriptableObject.hasProperty(target, s.index);
             } else {
-                result = ScriptableObject.hasProperty(target, s);
+                result = ScriptableObject.hasProperty(target, s.stringId);
             }
         }
 
@@ -2601,7 +2625,7 @@ public class ScriptRuntime {
                 cx.hasFeature(Context.FEATURE_STRICT_VARS))
             {
                 Context.reportWarning(
-                    ScriptRuntime.getMessage1("msg.assn.create.strict", id));
+                    ScriptRuntime.getMessageById("msg.assn.create.strict", id));
             }
             // Find the top scope by walking up the scope chain.
             bound = ScriptableObject.getTopLevelScope(scope);
@@ -2711,14 +2735,14 @@ public class ScriptRuntime {
             Object v = ScriptableObject.getProperty(obj,
                 NativeIterator.ITERATOR_PROPERTY_NAME);
             if (!(v instanceof Callable)) {
-               throw typeError0("msg.invalid.iterator");
+               throw typeErrorById("msg.invalid.iterator");
             }
             Callable f = (Callable) v;
             Object[] args = new Object[] { keyOnly ? Boolean.TRUE
                                                    : Boolean.FALSE };
             v = f.call(cx, scope, obj, args);
             if (!(v instanceof Scriptable)) {
-                throw typeError0("msg.iterator.primitive");
+                throw typeErrorById("msg.iterator.primitive");
             }
             return (Scriptable) v;
         }
@@ -2741,19 +2765,19 @@ public class ScriptRuntime {
                                               : ENUMERATE_KEYS);
     }
 
-    /** Constant ENUMERATE_KEYS=0 */
+    /** Constant <code>ENUMERATE_KEYS=0</code> */
     public static final int ENUMERATE_KEYS = 0;
-    /** Constant ENUMERATE_VALUES=1 */
+    /** Constant <code>ENUMERATE_VALUES=1</code> */
     public static final int ENUMERATE_VALUES = 1;
-    /** Constant ENUMERATE_ARRAY=2 */
+    /** Constant <code>ENUMERATE_ARRAY=2</code> */
     public static final int ENUMERATE_ARRAY = 2;
-    /** Constant ENUMERATE_KEYS_NO_ITERATOR=3 */
+    /** Constant <code>ENUMERATE_KEYS_NO_ITERATOR=3</code> */
     public static final int ENUMERATE_KEYS_NO_ITERATOR = 3;
-    /** Constant ENUMERATE_VALUES_NO_ITERATOR=4 */
+    /** Constant <code>ENUMERATE_VALUES_NO_ITERATOR=4</code> */
     public static final int ENUMERATE_VALUES_NO_ITERATOR = 4;
-    /** Constant ENUMERATE_ARRAY_NO_ITERATOR=5 */
+    /** Constant <code>ENUMERATE_ARRAY_NO_ITERATOR=5</code> */
     public static final int ENUMERATE_ARRAY_NO_ITERATOR = 5;
-    /** Constant ENUMERATE_VALUES_IN_ORDER=6 */
+    /** Constant <code>ENUMERATE_VALUES_IN_ORDER=6</code> */
     public static final int ENUMERATE_VALUES_IN_ORDER = 6;
 
     /**
@@ -2816,19 +2840,19 @@ public class ScriptRuntime {
 
     private static Object enumInitInOrder(Context cx, IdEnumeration x) {
         if (!(x.obj instanceof SymbolScriptable) || !ScriptableObject.hasProperty(x.obj, SymbolKey.ITERATOR)) {
-            throw typeError1("msg.not.iterable", toString(x.obj));
+            throw typeErrorById("msg.not.iterable", toString(x.obj));
         }
 
         Object iterator = ScriptableObject.getProperty(x.obj, SymbolKey.ITERATOR);
         if (!(iterator instanceof Callable)) {
-            throw typeError1("msg.not.iterable", toString(x.obj));
+            throw typeErrorById("msg.not.iterable", toString(x.obj));
         }
         Callable f = (Callable) iterator;
         Scriptable scope = x.obj.getParentScope();
         Object[] args = new Object[] {};
         Object v = f.call(cx, scope, x.obj, args);
         if (!(v instanceof Scriptable)) {
-            throw typeError1("msg.not.iterable", toString(x.obj));
+            throw typeErrorById("msg.not.iterable", toString(x.obj));
         }
         x.iterator = (Scriptable) v;
         return x;
@@ -2916,7 +2940,7 @@ public class ScriptRuntime {
         Object r = f.call(cx, scope, enumObj.iterator, emptyArgs);
         Scriptable iteratorResult = toObject(cx, scope, r);
         Object done = ScriptableObject.getProperty(iteratorResult, ES6Iterator.DONE_PROPERTY);
-        if (done != ScriptableObject.NOT_FOUND && toBoolean(done)) {
+        if (done != Scriptable.NOT_FOUND && toBoolean(done)) {
             return Boolean.FALSE;
         }
         enumObj.currentId = ScriptableObject.getProperty(iteratorResult, ES6Iterator.VALUE_PROPERTY);
@@ -2968,12 +2992,11 @@ public class ScriptRuntime {
             SymbolScriptable so = ScriptableObject.ensureSymbolScriptable(x.obj);
             result = so.get((Symbol)x.currentId, x.obj);
         } else {
-            String s = toStringIdOrIndex(cx, x.currentId);
-            if (s == null) {
-                int index = lastIndexResult(cx);
-                result = x.obj.get(index, x.obj);
+            StringIdOrIndex s = toStringIdOrIndex(cx, x.currentId);
+            if (s.stringId == null) {
+                result = x.obj.get(s.index, x.obj);
             } else {
-                result = x.obj.get(s, x.obj);
+                result = x.obj.get(s.stringId, x.obj);
             }
         }
 
@@ -3087,18 +3110,17 @@ public class ScriptRuntime {
             value = ScriptableObject.getProperty(thisObj, (Symbol)elem);
 
         } else {
-            String str = toStringIdOrIndex(cx, elem);
-            if (str != null) {
-                return getPropFunctionAndThis(obj, str, cx, scope);
+            StringIdOrIndex s = toStringIdOrIndex(cx, elem);
+            if (s.stringId != null) {
+                return getPropFunctionAndThis(obj, s.stringId, cx, scope);
             }
-            int index = lastIndexResult(cx);
 
             thisObj = toObjectOrNull(cx, obj, scope);
             if (thisObj == null) {
                 throw undefCallError(obj, String.valueOf(elem));
             }
 
-            value = ScriptableObject.getProperty(thisObj, index);
+            value = ScriptableObject.getProperty(thisObj, s.index);
         }
 
         if (!(value instanceof Callable)) {
@@ -3233,6 +3255,23 @@ public class ScriptRuntime {
     }
 
     /**
+     * Given an iterator result, return true if and only if there is a "done"
+     * property that's true.
+     *
+     * @param cx a {@link org.mozilla.javascript.Context} object.
+     * @param result a {@link java.lang.Object} object.
+     * @return a boolean.
+     */
+    public static boolean isIteratorDone(Context cx, Object result)
+    {
+        if (!(result instanceof Scriptable)) {
+            return false;
+        }
+        final Object prop = getObjectProp((Scriptable)result, ES6Iterator.DONE_PROPERTY, cx);
+        return toBoolean(prop);
+    }
+
+    /**
      * Perform function call in reference context. Should always
      * return value that can be passed to
      * {@link #refGet(Ref, Context)} or {@link #refSet(Ref, Object, Context)}
@@ -3259,7 +3298,7 @@ public class ScriptRuntime {
             return ref;
         }
         // No runtime support for now
-        String msg = getMessage1("msg.no.ref.from.function",
+        String msg = getMessageById("msg.no.ref.from.function",
                                  toString(function));
         throw constructError("ReferenceError", msg);
     }
@@ -3312,7 +3351,7 @@ public class ScriptRuntime {
             }
         } else if (callType == Node.SPECIALCALL_WITH) {
             if (NativeWith.isWithFunction(fun)) {
-                throw Context.reportRuntimeError1("msg.only.from.new",
+                throw Context.reportRuntimeErrorById("msg.only.from.new",
                                                   "With");
             }
         } else {
@@ -3338,7 +3377,7 @@ public class ScriptRuntime {
     {
         if (callType == Node.SPECIALCALL_EVAL) {
             if (NativeGlobal.isEvalFunction(fun)) {
-                throw typeError1("msg.not.ctor", "eval");
+                throw typeErrorById("msg.not.ctor", "eval");
             }
         } else if (callType == Node.SPECIALCALL_WITH) {
             if (NativeWith.isWithFunction(fun)) {
@@ -3421,7 +3460,7 @@ public class ScriptRuntime {
         } else if( arg1 instanceof ScriptableObject ) {
             return ScriptRuntime.emptyArgs;
         } else {
-            throw ScriptRuntime.typeError0("msg.arg.isnt.array");
+            throw ScriptRuntime.typeErrorById("msg.arg.isnt.array");
         }
     }
 
@@ -3464,9 +3503,9 @@ public class ScriptRuntime {
             if (cx.hasFeature(Context.FEATURE_STRICT_MODE) ||
                 cx.hasFeature(Context.FEATURE_STRICT_EVAL))
             {
-                throw Context.reportRuntimeError0("msg.eval.nonstring.strict");
+                throw Context.reportRuntimeErrorById("msg.eval.nonstring.strict");
             }
-            String message = ScriptRuntime.getMessage0("msg.eval.nonstring");
+            String message = ScriptRuntime.getMessageById("msg.eval.nonstring");
             Context.reportWarning(message);
             return x;
         }
@@ -3604,7 +3643,7 @@ public class ScriptRuntime {
             }
         }
         if ((val1 instanceof Symbol) || (val2 instanceof Symbol)) {
-            throw typeError0("msg.not.a.number");
+            throw typeErrorById("msg.not.a.number");
         }
         if (val1 instanceof Scriptable)
             val1 = ((Scriptable) val1).getDefaultValue(null);
@@ -3620,23 +3659,37 @@ public class ScriptRuntime {
     }
 
     /**
-     * <p>add.</p>
+     * https://262.ecma-international.org/11.0/#sec-addition-operator-plus
+     * 5. Let lprim be ? ToPrimitive(lval).
+     * 7. If Type(lprim) is String or Type(rprim) is String, then
+     *   a. Let lstr be ? ToString(lprim).
      *
+     * Should call toPrimitive before toCharSequence
+     *
+     * @deprecated Use {@link #add(Object, Object, Context)} instead
      * @param val1 a {@link java.lang.CharSequence} object.
      * @param val2 a {@link java.lang.Object} object.
      * @return a {@link java.lang.CharSequence} object.
      */
+    @Deprecated
     public static CharSequence add(CharSequence val1, Object val2) {
         return new ConsString(val1, toCharSequence(val2));
     }
 
     /**
-     * <p>add.</p>
+     * https://262.ecma-international.org/11.0/#sec-addition-operator-plus
+     * 6. Let rprim be ? ToPrimitive(rval).
+     * 7. If Type(lprim) is String or Type(rprim) is String, then
+     *   b. Let rstr be ? ToString(rprim).
      *
+     * Should call toPrimitive before toCharSequence
+     *
+     * @deprecated Use {@link #add(Object, Object, Context)} instead
      * @param val1 a {@link java.lang.Object} object.
      * @param val2 a {@link java.lang.CharSequence} object.
      * @return a {@link java.lang.CharSequence} object.
      */
+    @Deprecated
     public static CharSequence add(Object val1, CharSequence val2) {
         return new ConsString(toCharSequence(val1), val2);
     }
@@ -3690,7 +3743,7 @@ public class ScriptRuntime {
                 } while (target != null);
                 scopeChain = scopeChain.getParentScope();
             } while (scopeChain != null);
-            throw notFoundError(scopeChain, id);
+            throw notFoundError(null, id);
         }
         return doScriptableIncrDecr(target, id, scopeChain, value,
                                     incrDecrMask);
@@ -3755,7 +3808,7 @@ public class ScriptRuntime {
                                                Object value,
                                                int incrDecrMask)
     {
-        boolean post = ((incrDecrMask & Node.POST_FLAG) != 0);
+        final boolean post = (incrDecrMask & Node.POST_FLAG) != 0;
         double number;
         if (value instanceof Number) {
             number = ((Number)value).doubleValue();
@@ -3811,7 +3864,7 @@ public class ScriptRuntime {
                                       int incrDecrMask)
     {
         Object value = getObjectElem(obj, index, cx, scope);
-        boolean post = ((incrDecrMask & Node.POST_FLAG) != 0);
+        final boolean post = (incrDecrMask & Node.POST_FLAG) != 0;
         double number;
         if (value instanceof Number) {
             number = ((Number)value).doubleValue();
@@ -3912,7 +3965,7 @@ public class ScriptRuntime {
         Scriptable s = (Scriptable)val;
         Object result = s.getDefaultValue(typeHint);
         if ((result instanceof Scriptable) && !isSymbol(result))
-            throw typeError0("msg.bad.default.value");
+            throw typeErrorById("msg.bad.default.value");
         return result;
     }
 
@@ -4063,10 +4116,10 @@ public class ScriptRuntime {
      */
     public static boolean isNaN(Object n) {
         if (n instanceof Double) {
-            return Double.isNaN((Double)n);
+            return ((Double)n).isNaN();
         }
         if (n instanceof Float) {
-            return Float.isNaN((Float)n);
+            return ((Float)n).isNaN();
         }
         return false;
     }
@@ -4197,7 +4250,7 @@ public class ScriptRuntime {
     {
         // Check RHS is an object
         if (! (b instanceof Scriptable)) {
-            throw typeError0("msg.instanceof.not.object");
+            throw typeErrorById("msg.instanceof.not.object");
         }
 
         // for primitive values on LHS, return false
@@ -4243,7 +4296,7 @@ public class ScriptRuntime {
     public static boolean in(Object a, Object b, Context cx)
     {
         if (!(b instanceof Scriptable)) {
-            throw typeError0("msg.in.not.object");
+            throw typeErrorById("msg.in.not.object");
         }
 
         return hasObjectElem((Scriptable)b, a, cx);
@@ -4264,7 +4317,7 @@ public class ScriptRuntime {
             d2 = ((Number)val2).doubleValue();
         } else {
             if ((val1 instanceof Symbol) || (val2 instanceof Symbol)) {
-                throw typeError0("msg.compare.symbol");
+                throw typeErrorById("msg.compare.symbol");
             }
             if (val1 instanceof Scriptable)
                 val1 = ((Scriptable) val1).getDefaultValue(NumberClass);
@@ -4294,7 +4347,7 @@ public class ScriptRuntime {
             d2 = ((Number)val2).doubleValue();
         } else {
             if ((val1 instanceof Symbol) || (val2 instanceof Symbol)) {
-                throw typeError0("msg.compare.symbol");
+                throw typeErrorById("msg.compare.symbol");
             }
             if (val1 instanceof Scriptable)
                 val1 = ((Scriptable) val1).getDefaultValue(NumberClass);
@@ -4427,10 +4480,10 @@ public class ScriptRuntime {
     }
 
     /**
-     * Return <tt>possibleDynamicScope</tt> if <tt>staticTopScope</tt>
-     * is present on its prototype chain and return <tt>staticTopScope</tt>
+     * Return <code>possibleDynamicScope</code> if <code>staticTopScope</code>
+     * is present on its prototype chain and return <code>staticTopScope</code>
      * otherwise.
-     * Should only be called when <tt>staticTopScope</tt> is top scope.
+     * Should only be called when <code>staticTopScope</code> is top scope.
      */
     static Scriptable checkDynamicScope(Scriptable possibleDynamicScope,
                                         Scriptable staticTopScope)
@@ -4832,7 +4885,7 @@ public class ScriptRuntime {
     {
         Scriptable sobj = toObjectOrNull(cx, obj, scope);
         if (sobj == null) {
-            throw typeError1("msg.undef.with", toString(obj));
+            throw typeErrorById("msg.undef.with", toString(obj));
         }
         if (sobj instanceof XMLObject) {
             XMLObject xmlObject = (XMLObject)sobj;
@@ -4904,8 +4957,26 @@ public class ScriptRuntime {
     public static void setFunctionProtoAndParent(BaseFunction fn,
                                                  Scriptable scope)
     {
+        setFunctionProtoAndParent(fn, scope, false);
+    }
+
+    /**
+     * <p>setFunctionProtoAndParent.</p>
+     *
+     * @param fn a {@link org.mozilla.javascript.BaseFunction} object.
+     * @param scope a {@link org.mozilla.javascript.Scriptable} object.
+     * @param es6GeneratorFunction a boolean.
+     */
+    public static void setFunctionProtoAndParent(BaseFunction fn,
+                                                Scriptable scope,
+                                                boolean es6GeneratorFunction)
+    {
         fn.setParentScope(scope);
-        fn.setPrototype(ScriptableObject.getFunctionPrototype(scope));
+        if (es6GeneratorFunction) {
+            fn.setPrototype(ScriptableObject.getGeneratorFunctionPrototype(scope));
+        } else {
+            fn.setPrototype(ScriptableObject.getFunctionPrototype(scope));
+        }
     }
 
     /**
@@ -5122,7 +5193,7 @@ public class ScriptRuntime {
     public static Object[] getArrayElements(Scriptable object)
     {
         Context cx = Context.getContext();
-        long longLen = NativeArray.getLengthProperty(cx, object, false);
+        long longLen = NativeArray.getLengthProperty(cx, object);
         if (longLen > Integer.MAX_VALUE) {
             // arrays beyond  MAX_INT is not in Java in any case
             throw new IllegalArgumentException();
@@ -5143,7 +5214,7 @@ public class ScriptRuntime {
     static void checkDeprecated(Context cx, String name) {
         int version = cx.getLanguageVersion();
         if (version >= Context.VERSION_1_4 || version == Context.VERSION_DEFAULT) {
-            String msg = getMessage1("msg.deprec.ctor", name);
+            String msg = getMessageById("msg.deprec.ctor", name);
             if (version == Context.VERSION_DEFAULT)
                 Context.reportWarning(msg);
             else
@@ -5154,9 +5225,11 @@ public class ScriptRuntime {
     /**
      * <p>getMessage0.</p>
      *
+     * @deprecated Use {@link #getMessageById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @return a {@link java.lang.String} object.
      */
+    @Deprecated
     public static String getMessage0(String messageId)
     {
         return getMessage(messageId, null);
@@ -5165,10 +5238,12 @@ public class ScriptRuntime {
     /**
      * <p>getMessage1.</p>
      *
+     * @deprecated Use {@link #getMessageById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @param arg1 a {@link java.lang.Object} object.
      * @return a {@link java.lang.String} object.
      */
+    @Deprecated
     public static String getMessage1(String messageId, Object arg1)
     {
         Object[] arguments = {arg1};
@@ -5178,11 +5253,13 @@ public class ScriptRuntime {
     /**
      * <p>getMessage2.</p>
      *
+     * @deprecated Use {@link #getMessageById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @param arg1 a {@link java.lang.Object} object.
      * @param arg2 a {@link java.lang.Object} object.
      * @return a {@link java.lang.String} object.
      */
+    @Deprecated
     public static String getMessage2(
         String messageId, Object arg1, Object arg2)
     {
@@ -5193,12 +5270,14 @@ public class ScriptRuntime {
     /**
      * <p>getMessage3.</p>
      *
+     * @deprecated Use {@link #getMessageById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @param arg1 a {@link java.lang.Object} object.
      * @param arg2 a {@link java.lang.Object} object.
      * @param arg3 a {@link java.lang.Object} object.
      * @return a {@link java.lang.String} object.
      */
+    @Deprecated
     public static String getMessage3(
         String messageId, Object arg1, Object arg2, Object arg3)
     {
@@ -5209,6 +5288,7 @@ public class ScriptRuntime {
     /**
      * <p>getMessage4.</p>
      *
+     * @deprecated Use {@link #getMessageById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @param arg1 a {@link java.lang.Object} object.
      * @param arg2 a {@link java.lang.Object} object.
@@ -5216,6 +5296,7 @@ public class ScriptRuntime {
      * @param arg4 a {@link java.lang.Object} object.
      * @return a {@link java.lang.String} object.
      */
+    @Deprecated
     public static String getMessage4(
         String messageId, Object arg1, Object arg2, Object arg3, Object arg4)
     {
@@ -5227,7 +5308,7 @@ public class ScriptRuntime {
      * This is an interface defining a message provider. Create your
      * own implementation to override the default error message provider.
      *
-     * @author Mike Harm
+     * Author Mike Harm
      */
     public interface MessageProvider {
 
@@ -5237,24 +5318,38 @@ public class ScriptRuntime {
          *
          * @param messageId the identifier of the message
          * @param arguments the arguments to fill into the message
-         *  @return a {@link java.lang.String} object.
+         * @return a {@link java.lang.String} object.
          */
         String getMessage(String messageId, Object[] arguments);
     }
 
-    /** Constant messageProvider */
+    /** Constant <code>messageProvider</code> */
     public static final MessageProvider messageProvider = new DefaultMessageProvider();
 
     /**
      * <p>getMessage.</p>
      *
+     * @deprecated Use {@link #getMessageById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @param arguments an array of {@link java.lang.Object} objects.
      * @return a {@link java.lang.String} object.
      */
+    @Deprecated
     public static String getMessage(String messageId, Object[] arguments)
     {
         return messageProvider.getMessage(messageId, arguments);
+    }
+
+    /**
+     * <p>getMessageById.</p>
+     *
+     * @param messageId a {@link java.lang.String} object.
+     * @param args a {@link java.lang.Object} object.
+     * @return a {@link java.lang.String} object.
+     */
+    public static String getMessageById(String messageId, Object... args)
+    {
+        return messageProvider.getMessage(messageId, args);
     }
 
     /* OPT there's a noticable delay for the first error!  Maybe it'd
@@ -5370,11 +5465,26 @@ public class ScriptRuntime {
     }
 
     /**
+     * <p>typeErrorById.</p>
+     *
+     * @param messageId a {@link java.lang.String} object.
+     * @param args a {@link java.lang.Object} object.
+     * @return a {@link org.mozilla.javascript.EcmaError} object.
+     */
+    public static EcmaError typeErrorById(String messageId, Object... args)
+    {
+        String msg = getMessageById(messageId, args);
+        return typeError(msg);
+    }
+
+    /**
      * <p>typeError0.</p>
      *
+     * @deprecated Use {@link #typeErrorById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @return a {@link org.mozilla.javascript.EcmaError} object.
      */
+    @Deprecated
     public static EcmaError typeError0(String messageId)
     {
         String msg = getMessage0(messageId);
@@ -5384,10 +5494,12 @@ public class ScriptRuntime {
     /**
      * <p>typeError1.</p>
      *
+     * @deprecated Use {@link #typeErrorById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @param arg1 a {@link java.lang.Object} object.
      * @return a {@link org.mozilla.javascript.EcmaError} object.
      */
+    @Deprecated
     public static EcmaError typeError1(String messageId, Object arg1)
     {
         String msg = getMessage1(messageId, arg1);
@@ -5397,11 +5509,13 @@ public class ScriptRuntime {
     /**
      * <p>typeError2.</p>
      *
+     * @deprecated Use {@link #typeErrorById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @param arg1 a {@link java.lang.Object} object.
      * @param arg2 a {@link java.lang.Object} object.
      * @return a {@link org.mozilla.javascript.EcmaError} object.
      */
+    @Deprecated
     public static EcmaError typeError2(String messageId, Object arg1,
                                        Object arg2)
     {
@@ -5412,12 +5526,14 @@ public class ScriptRuntime {
     /**
      * <p>typeError3.</p>
      *
+     * @deprecated Use {@link #typeErrorById(String messageId, Object... args)} instead
      * @param messageId a {@link java.lang.String} object.
      * @param arg1 a {@link java.lang.String} object.
      * @param arg2 a {@link java.lang.String} object.
      * @param arg3 a {@link java.lang.String} object.
      * @return a {@link org.mozilla.javascript.EcmaError} object.
      */
+    @Deprecated
     public static EcmaError typeError3(String messageId, String arg1,
                                        String arg2, String arg3)
     {
@@ -5434,7 +5550,7 @@ public class ScriptRuntime {
      */
     public static RuntimeException undefReadError(Object object, Object id)
     {
-        return typeError2("msg.undef.prop.read", toString(object), toString(id));
+        return typeErrorById("msg.undef.prop.read", toString(object), toString(id));
     }
 
     /**
@@ -5446,7 +5562,7 @@ public class ScriptRuntime {
      */
     public static RuntimeException undefCallError(Object object, Object id)
     {
-        return typeError2("msg.undef.method.call", toString(object), toString(id));
+        return typeErrorById("msg.undef.method.call", toString(object), toString(id));
     }
 
     /**
@@ -5461,13 +5577,13 @@ public class ScriptRuntime {
                                                    Object id,
                                                    Object value)
     {
-        return typeError3("msg.undef.prop.write", toString(object), toString(id),
+        return typeErrorById("msg.undef.prop.write", toString(object), toString(id),
                           toString(value));
     }
 
     private static RuntimeException undefDeleteError(Object object, Object id)
     {
-        throw typeError2("msg.undef.prop.delete", toString(object), toString(id));
+        throw typeErrorById("msg.undef.prop.delete", toString(object), toString(id));
     }
 
     /**
@@ -5481,7 +5597,7 @@ public class ScriptRuntime {
                                                  String property)
     {
         // XXX: use object to improve the error message
-        String msg = getMessage1("msg.is.not.defined", property);
+        String msg = getMessageById("msg.is.not.defined", property);
         throw constructError("ReferenceError", msg);
     }
 
@@ -5510,9 +5626,9 @@ public class ScriptRuntime {
         String msg = (messageHelper == null)
                      ? "null" : messageHelper.toString();
         if (value == Scriptable.NOT_FOUND) {
-            return typeError1("msg.function.not.found", msg);
+            return typeErrorById("msg.function.not.found", msg);
         }
-        return typeError2("msg.isnt.function", msg, typeof(value));
+        return typeErrorById("msg.isnt.function", msg, typeof(value));
     }
 
     /**
@@ -5537,23 +5653,23 @@ public class ScriptRuntime {
             }
         }
         if (value == Scriptable.NOT_FOUND) {
-            return typeError2("msg.function.not.found.in", propertyName,
+            return typeErrorById("msg.function.not.found.in", propertyName,
                     objString);
         }
-        return typeError3("msg.isnt.function.in", propertyName, objString,
+        return typeErrorById("msg.isnt.function.in", propertyName, objString,
                           typeof(value));
     }
 
     private static RuntimeException notXmlError(Object value)
     {
-        throw typeError1("msg.isnt.xml.object", toString(value));
+        throw typeErrorById("msg.isnt.xml.object", toString(value));
     }
 
     private static void warnAboutNonJSObject(Object nonJSObject)
     {
-        final String omitParam = ScriptRuntime.getMessage0("params.omit.non.js.object.warning");
+        final String omitParam = ScriptRuntime.getMessageById("params.omit.non.js.object.warning");
         if (!"true".equals(omitParam)) {
-            String message = ScriptRuntime.getMessage2("msg.non.js.object.warning",nonJSObject,nonJSObject.getClass().getName());
+            String message = ScriptRuntime.getMessageById("msg.non.js.object.warning",nonJSObject,nonJSObject.getClass().getName());
             Context.reportWarning(message);
             // Just to be sure that it would be noticed
             System.err.println(message);
@@ -5593,7 +5709,7 @@ public class ScriptRuntime {
     {
         RegExpProxy result = getRegExpProxy(cx);
         if (result == null) {
-            throw Context.reportRuntimeError0("msg.no.regexp");
+            throw Context.reportRuntimeErrorById("msg.no.regexp");
         }
         return result;
     }
@@ -5726,16 +5842,6 @@ public class ScriptRuntime {
         return xmlLib.nameRef(cx, namespace, name, scope, memberTypeFlags);
     }
 
-    private static void storeIndexResult(Context cx, int index)
-    {
-        cx.scratchIndex = index;
-    }
-
-    static int lastIndexResult(Context cx)
-    {
-        return cx.scratchIndex;
-    }
-
     /**
      * <p>storeUint32Result.</p>
      *
@@ -5805,13 +5911,13 @@ public class ScriptRuntime {
      * by using an "instanceof" check.
      */
     static boolean isSymbol(Object obj) {
-        return (((obj instanceof NativeSymbol) &&
-                ((NativeSymbol)obj).isSymbol())) || (obj instanceof SymbolKey);
+        return (( (obj instanceof NativeSymbol) && ((NativeSymbol)obj).isSymbol()))
+                    || (obj instanceof SymbolKey);
     }
 
     private static RuntimeException errorWithClassName(String msg, Object val)
     {
-        return Context.reportRuntimeError1(msg, val.getClass().getName());
+        return Context.reportRuntimeErrorById(msg, val.getClass().getName());
     }
 
     /**
@@ -5850,9 +5956,9 @@ public class ScriptRuntime {
       return new JavaScriptException(error, filename, linep[0]);
     }
 
-    /** Constant emptyArgs */
+    /** Constant <code>emptyArgs</code> */
     public static final Object[] emptyArgs = new Object[0];
-    /** Constant emptyStrings */
+    /** Constant <code>emptyStrings</code> */
     public static final String[] emptyStrings = new String[0];
 
 
